[project]
name = "anthill"
version = "0.1.0"
description = "FastAPI-based Anthill project"
authors = [
    { name="Your Name", email="your@email.com" }
]
requires-python = ">=3.8"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "python-dotenv"
]

[tool.setuptools]
packages = ["anthill"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
